--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <section id="works">
-        <p class="title">My Projects</p>
+        <p class="title">Projects I Worked</p>
         <div class="big-container">
             <div class="photo-container">
                 <div class="image-container">
