--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Hicret Ay | Software Developer</title>
+    <title>Hicret AY | Flutter Developer</title>
 </head>
 
 <body>
