--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="image-container">
                     <img src="src/envoy.gif" alt="Envoy Şoför">
                 </div>
-                <p>Envoy</p>
+                <p>Envoy Şoför</p>
             </div>
 
         </div>
