--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                 </div>
                 <p>Envoy Şoför</p>
             </div>
+            <div class="photo-container">
+                <div class="image-container">
+                    <img src="src/genctakim.gif" alt="Genç Takım">
+                </div>
+                <p>Genç Takım</p>
+            </div>
 
         </div>
 
