--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Hicret AY | Flutter Developer</title>
+    <title>Hicret AY | Jr. Flutter Developer</title>
 </head>
 
 <body>
@@ -27,12 +27,11 @@
                     <h1 data-aos="fade-right">Hicret AY</h1>
                     <div id="titleText">Frontend Developer</div>
                     <p data-aos="fade-left" style="font-size: 17px;">Hi, my name is Hicret. I am computer engineering
-                        student. I am interested in Mobile Programming especially Flutter. I’m looking to collaborate
-                        people for Flutter learning.</p>
+                        student. I am interested in Mobile Programming especially Flutter and I am looking for a new job to apply and advance my flutter knowledge.</p>
                     <p data-aos="fade-right"><i class="fas fa-map-marker-alt" style="padding-right:5px;"></i><span
-                            style="font-style: italic;">Afyonkarahisar, Turkey</span></p>
+                            style="font-style: italic;">Konya, Turkey</span></p>
                     <p data-aos="fade-right"><i class="far fa-building" style="padding-right:5px;"></i><span
-                            style="font-style: italic;">Computer Engineering, Selçuk University</span></p>
+                            style="font-style: italic;">Computer Engineering, Selcuk University</span></p>
 
                 </div>
             </div>
