--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <img src="https://img.icons8.com/color/48/000000/git.png" />
             <img src="https://img.icons8.com/color/48/000000/android-studio--v3.png" />
             <img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png" />
+            <img src="https://img.icons8.com/color/48/000000/c-sharp-logo-2.png"/>
+            <img src="https://img.icons8.com/color/48/000000/microsoft-sql-server.png"/>
 
         </div>
     </div>
