source codes added

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
                 <div class="information-text-container">
                     <h1 data-aos="fade-right">Hicret AY</h1>
                     <div id="titleText">Frontend Developer</div>
-                    <p data-aos="fade-left" style="font-size: 17px;">Hi, my name is Hicret. I am computer engineering
-                        student. I am interested in Mobile Programming especially Flutter and I am looking for a new job to apply and advance my flutter knowledge.</p>
+                    <p data-aos="fade-left" style="font-size: 17px;">Hi, my name is Hicret. I am computer engineer.
+                        I am interested in Mobile Programming especially Flutter and I am looking for a new job to apply
+                        and advance my flutter knowledge.</p>
                     <p data-aos="fade-right"><i class="fas fa-map-marker-alt" style="padding-right:5px;"></i><span
-                            style="font-style: italic;">Konya, Turkey</span></p>
+                            style="font-style: italic;">Afyonkarahisar, Turkey</span></p>
                     <p data-aos="fade-right"><i class="far fa-building" style="padding-right:5px;"></i><span
-                            style="font-style: italic;">Computer Engineering, Selcuk University</span></p>
+                            style="font-style: italic;">Flutter Developer, SambaPOS Software</span></p>
 
                 </div>
             </div>
@@ -55,38 +56,42 @@
             <img src="https://img.icons8.com/color/48/000000/git.png" />
             <img src="https://img.icons8.com/color/48/000000/android-studio--v3.png" />
             <img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png" />
-            <img src="https://img.icons8.com/color/48/000000/c-sharp-logo-2.png"/>
-            <img src="https://img.icons8.com/color/48/000000/microsoft-sql-server.png"/>
+            <img src="https://img.icons8.com/color/48/000000/c-sharp-logo-2.png" />
+            <img src="https://img.icons8.com/color/48/000000/microsoft-sql-server.png" />
 
         </div>
     </div>
 
     <section id="works">
-        <p class="title">Projects I Worked</p>
+        <p class="title">Projects I Completed</p>
         <div class="big-container">
             <div class="photo-container">
                 <div class="image-container">
                     <img src="src/estetik.gif" alt="Estetik Vitrini">
                 </div>
                 <p>Estetik Vitrini</p>
+                <a href="https://github.com/hicretay/estetik_vitrini">codes</a>
             </div>
             <div class="photo-container">
                 <div class="image-container">
                     <img src="src/arcair.gif" alt="ARCAir">
                 </div>
                 <p>ARCAir</p>
+                <a href="https://github.com/hicretay/arcair_ui">codes</a>
             </div>
             <div class="photo-container">
                 <div class="image-container">
                     <img src="src/envoy.gif" alt="Envoy Şoför">
                 </div>
                 <p>Envoy Şoför</p>
+                <a href="https://github.com/hicretay/envoy_sofor">codes</a>
             </div>
             <div class="photo-container">
                 <div class="image-container">
                     <img src="src/genctakim.gif" alt="Genç Takım">
                 </div>
                 <p>Genç Takım</p>
+                <a href="https://github.com/hicretay/genc_takim">codes</a>
             </div>
 
         </div>
@@ -117,7 +122,7 @@
         .typeString('Mobile Developer')
         .pauseFor(300)
         .deleteChars(16)
-        .typeString('Student')
+        .typeString('Computer Engineer')
         .pauseFor(1000)
         .start();
 </script>
