--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Afyonkarahisar, Turkey</address>
+              <address>İstanbul, Turkey</address>
             </div>
 
           </li>
@@ -177,7 +177,7 @@
 
         <section class="about-text">
           <p>
-            Hi, I'm a dedicated Mobile Developer hailing from the Afyonkarahisar, Turkey, with a strong background in mobile app development.</p>
+            Hi, I'm a dedicated Mobile Developer hailing from the İstanbul, Turkey, with a strong background in mobile app development.</p>
 
           <p>
             About 3 years of experience Flutter Developer, I'm open for a full-time opportunity in Mobile Programming. 
