--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             Hi, I'm a dedicated Mobile Developer hailing from the Istanbul, Turkey, with a strong background in mobile app development.</p>
 
           <p>
-            About 3 years of experience Flutter Developer, I'm open for a full-time opportunity in Mobile Programming. 
+            About 4 years of experience Flutter Developer, I'm open for a full-time and freelance opportunity in Mobile Programming. 
             I'm committed to staying on the cutting edge of technology trends, ensuring that the solutions I create are not only functional but also at the forefront of innovation.
           </p>
 
