--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/me2.png" alt="Hicret Ay" width="80">
+          <img src="./assets/images/me2.png" alt="Hicret Uyar" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Hicret Ay">Hicret AY</h1>
+          <h1 class="name" title="Hicret Uyar">Hicret UYAR</h1>
 
           <p class="title">Mobile developer</p>
         </div>
@@ -177,20 +177,25 @@
 
         <section class="about-text">
           <p>
-            Hi, I'm a dedicated Mobile Developer hailing from the Istanbul, Turkey, with a strong background in mobile app development.</p>
+            Hi, I'm a dedicated Mobile Developer hailing from the Istanbul, Turkey, with a strong background in mobile
+            app development.</p>
 
           <p>
-            About 4 years of experience Flutter Developer, I'm open for a full-time and freelance opportunity in Mobile Programming. 
-            I'm committed to staying on the cutting edge of technology trends, ensuring that the solutions I create are not only functional but also at the forefront of innovation.
+            About 5 years of experience Flutter Developer, I'm open for a full-time and freelance opportunity in Mobile
+            Programming.
+            I'm committed to staying on the cutting edge of technology trends, ensuring that the solutions I create are
+            not only functional but also at the forefront of innovation.
           </p>
 
           <p>
             Collaboration is at the core of my approach.
-            I believe that the best results are achieved when a diverse team comes together to solve problems, leveraging their unique perspectives and skillsets.
+            I believe that the best results are achieved when a diverse team comes together to solve problems,
+            leveraging their unique perspectives and skillsets.
           </p>
 
           <p>
-            In summary, I'm not just a Mobile Developer; I'm a problem solver, a creative thinker, and a dedicated who is ready to contribute to the success of your next mobile app endeavor. 
+            In summary, I'm not just a Mobile Developer; I'm a problem solver, a creative thinker, and a dedicated who
+            is ready to contribute to the success of your next mobile app endeavor.
             Let's work together to create something truly exceptional.
           </p>
 
@@ -362,20 +367,49 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">TUTUS MEDIA GmbH,&nbsp;Mobile Developer - Freelance</h4>
+              <h4 class="h4 timeline-item-title">TUTUS MEDIA GmbH,&nbsp;Mobile Developer - Full Time</h4>
 
-              <span>August 2023 - Present</span>
+              <span>August 2024 - Present • Obertshausen, Germany (Remote)</span>
 
               <p class="timeline-text">
                 As a member of the Mobile Development Team at Morgenmarkt, I actively contribute to the development and
                 deployment of mobile applications using the Flutter framework.
               </p>
 
-              <p class="timeline-text"></pclass>
-                <p class="timeline-text">- Publishing and updating application on Google Play Store and App Store&nbsp;</p>
-                <p class="timeline-text">- Integrating desired UI designs and making Restful API connections&nbsp;</p>
-                <p class="timeline-text">- Completing tasks given from Notion&nbsp;</p>
+              <p class="timeline-text">- Publishing and updating application on Google Play Store and App Store</p>
+              <p class="timeline-text">- Integrating desired UI designs and making Restful API connections</p>
+              <p class="timeline-text">- Optimizing app performance and implementing new features for enhanced user
+                experience</p>
+              <div class="app-store-links">
+                <span style="color: var(--light-gray); font-size: 14px; margin-right: 10px;">Morgenmarkt App:</span>
+                <a href="https://apps.apple.com/us/app/morgenmarkt-online-supermarkt/id1643298128" target="_blank"
+                  class="app-store-icon apple">
+                  <ion-icon name="logo-apple"></ion-icon>
+                  App Store
+                </a>
+                <a href="https://play.google.com/store/apps/details?id=morgen.markt.app&hl=tr&pli=1" target="_blank"
+                  class="app-store-icon google">
+                  <ion-icon name="logo-google-playstore"></ion-icon>
+                  Google Play
+                </a>
+              </div>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">TUTUS MEDIA GmbH,&nbsp;Mobile Developer - Freelance</h4>
+
+              <span>August 2023 - July 2024 • Obertshausen, Germany (Remote)</span>
+
+              <p class="timeline-text">
+                Worked as a freelance mobile developer on the Morgenmarkt App project, contributing to mobile
+                application development using Flutter framework.
               </p>
+
+              <p class="timeline-text">- Developed features for Morgenmarkt mobile application</p>
+              <p class="timeline-text">- Collaborated with the development team remotely</p>
+              <p class="timeline-text">- Implemented UI/UX designs and API integrations</p>
 
             </li>
 
@@ -383,7 +417,7 @@
 
               <h4 class="h4 timeline-item-title">sambapos SOFTWARE,&nbsp;Flutter Developer - Full time</h4>
 
-              <span>January 2022 - Present</span>
+              <span>January 2022 - July 2024 • Istanbul, Turkey</span>
 
               <p class="timeline-text"> Worked on web development with flutter. Tasks were taken in the Jetrik project
                 and its sub-projects.&nbsp;</p>
@@ -400,7 +434,7 @@
               <h4 class="h4 timeline-item-title">AE CODE TECHNOLOGY,&nbsp;Jr. Software Developer - Internship / Full
                 time</h4>
 
-              <span>February 2021 - January 2022</span>
+              <span>February 2021 - January 2022 • Konya, Turkey</span>
 
               <p class="timeline-text"> Worked on mobile application development with Flutter and Web API development
                 with asp .NET Core.&nbsp;</p>
@@ -423,71 +457,76 @@
 
           <ul class="skills-list content-card">
 
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Dart/flutter</h5>
-                <data value="80">80%</data>
+            <li class="skills-item-new">
+              <div class="skill-card">
+                <div class="skill-icon">
+                  <ion-icon name="phone-portrait-outline"></ion-icon>
+                </div>
+                <div class="skill-content">
+                  <h5 class="h5">Dart/Flutter</h5>
+                  <p class="skill-description">Cross-platform mobile development</p>
+                </div>
               </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
             </li>
 
-
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">android(java)</h5>
-                <data value="50">50%</data>
+            <li class="skills-item-new">
+              <div class="skill-card">
+                <div class="skill-icon">
+                  <ion-icon name="logo-android"></ion-icon>
+                </div>
+                <div class="skill-content">
+                  <h5 class="h5">Android (Java)</h5>
+                  <p class="skill-description">Native Android development</p>
+                </div>
               </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
             </li>
 
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">c#</h5>
-                <data value="50">50%</data>
+            <li class="skills-item-new">
+              <div class="skill-card">
+                <div class="skill-icon">
+                  <ion-icon name="code-outline"></ion-icon>
+                </div>
+                <div class="skill-content">
+                  <h5 class="h5">C#</h5>
+                  <p class="skill-description">Backend development & APIs</p>
+                </div>
               </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
             </li>
 
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">MS SQL</h5>
-                <data value="50">50%</data>
+            <li class="skills-item-new">
+              <div class="skill-card">
+                <div class="skill-icon">
+                  <ion-icon name="server-outline"></ion-icon>
+                </div>
+                <div class="skill-content">
+                  <h5 class="h5">MS SQL</h5>
+                  <p class="skill-description">Database management & queries</p>
+                </div>
               </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
             </li>
 
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">swiftUI</h5>
-                <data value="30">30%</data>
+            <li class="skills-item-new">
+              <div class="skill-card">
+                <div class="skill-icon">
+                  <ion-icon name="logo-apple"></ion-icon>
+                </div>
+                <div class="skill-content">
+                  <h5 class="h5">SwiftUI</h5>
+                  <p class="skill-description">iOS native development</p>
+                </div>
               </div>
+            </li>
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 30%;"></div>
+            <li class="skills-item-new">
+              <div class="skill-card">
+                <div class="skill-icon">
+                  <ion-icon name="git-branch-outline"></ion-icon>
+                </div>
+                <div class="skill-content">
+                  <h5 class="h5">Git & Version Control</h5>
+                  <p class="skill-description">Source code management</p>
+                </div>
               </div>
-
             </li>
 
           </ul>
@@ -671,7 +710,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="my applications">
-              
+
 
               <a href="https://github.com/hicretay/genc_takim" target="new">
 
